--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/dhruv.dhote/"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#https://www.linkedin.com/in/dhruv-dhote-500045203"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/dhruv-dhote-500045203"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/DhruvDhote213mriirs"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                     <!-- Footer About Text-->
