--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="portfolio1.png" alt="" />
+                            <img class="img-fluid" src="new1.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -220,7 +220,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="portfolio1.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="new1.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Portfolio made using HTML and CSS <br><a href="https://dhruvdhote213mriirs.github.io/Portfolio/">Portfolio</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
